--- a/.github/workflows/posthog_pipeline.yml
+++ b/.github/workflows/posthog_pipeline.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests posthog
+          pip install requests posthog python-dotenv
 
       - name: Run the PostHog Push Script
         # Set environment variables needed for the script
